07.HPA/2.go-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: golangdemoport
spec:
  type: NodePort 
  selector:
    app: golangdemo
  ports:
  - port: 8081
    targetPort: 8080
