07.HPA/4.golang-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-golang.info
    http:
      paths:
      - path: /v1
        backend:
          serviceName: golangdemo
          servicePort: 8080
      - path: /v2
        backend:
          serviceName: golangdemoport
          servicePort: 8080
